Fix artist name in logo button and HTML structure
Updated the artist's name in the logo button and ensured proper HTML structure.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navigation -->
     <nav id="main-nav">
         <div class="nav-container">
-            <button id="logo-btn" class="logo">Fatima Zahrae Rjafellah</button>
+            <button id="logo-btn" class="logo">Fatima Zahrae Rjafellahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</button>
             
             <!-- Desktop Menu -->
             <div class="desktop-menu">
@@ -242,4 +242,5 @@
     <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
+
 </html>
