--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navigation -->
     <nav id="main-nav">
         <div class="nav-container">
-            <button id="logo-btn" class="logo">Fatima Zahrae Rjafellahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</button>
+            <button id="logo-btn" class="logo">Fatima Zahrae Rjafellah</button>
             
             <!-- Desktop Menu -->
             <div class="desktop-menu">
@@ -244,3 +244,4 @@
 </body>
 
 </html>
+
