--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <button class="btn-primary" data-page="about">Learn More About My Process</button>
                     </div>
                     <div class="vision-image">
-                        <img src="TP.jpg">
+                        <img src="image 2.png">
                     </div>
                 </div>
             </section>
@@ -244,4 +244,5 @@
 </body>
 
 </html>
+
 
