--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
             <!-- Featured Works Preview -->
             <section class="featured-section">
                 <h2>Selected Works</h2>
-                <div id="featured-grid" class="featured-grid"></div>
+                                   <div class="vision-image">
+                        <img src="image 4.jpg">
+                    </div>
                 <div class="text-center">
                     <button class="btn-secondary" data-page="gallery">View Full Gallery</button>
                 </div>
@@ -244,5 +246,6 @@
 </body>
 
 </html>
+
 
 
